# kachaka-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: Install-KachakaMCP.ps1  Start-KachakaMCP.ps1  install.bat  install.sh  run.bat  run.sh
src/kachaka_mcp/: __init__.py  auth.py  prompts.py  resources.py  server.py  tools.py
src/kachaka_mcp/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  test_server.py
